syntax = "proto3";

package com.kohan.proto.authentication.v1;

message UserToken {
  string token = 1;
}

message UserDto {
  oneof response{
    string userId = 1;
    string error = 2;
  }
}

service AuthenticationService {
  rpc authenticateUser(UserToken) returns (UserDto) {}
}